--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,9 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+build
+artifacts
+cache
 
 # Dependency directories
 node_modules/
